# deltae

./: .gitignore  Cargo.toml  README.md
docs/: .rustc_info.json  DeltaE.t.html  all.html  enum.DEMethod.html  index.html  sidebar-items.js
docs/color/: struct.LchValue.html
docs/debug/.fingerprint/ansi_term-01cf75060641a7d6/: lib-ansi_term-01cf75060641a7d6  lib-ansi_term-01cf75060641a7d6.json
docs/debug/.fingerprint/atty-092f578bde24db83/: lib-atty-092f578bde24db83  lib-atty-092f578bde24db83.json
docs/debug/.fingerprint/bitflags-35736f3daf0f2779/: lib-bitflags-35736f3daf0f2779  lib-bitflags-35736f3daf0f2779.json
docs/debug/.fingerprint/clap-0c771b8645c57a29/: lib-clap-0c771b8645c57a29  lib-clap-0c771b8645c57a29.json
docs/debug/.fingerprint/deltae-3e48ae741cba1e41/: doc-lib-deltae-3e48ae741cba1e41  doc-lib-deltae-3e48ae741cba1e41.json
docs/debug/.fingerprint/libc-aabdc57699dad583/: lib-libc-aabdc57699dad583  lib-libc-aabdc57699dad583.json
docs/debug/.fingerprint/strsim-0403e79dadad7934/: lib-strsim-0403e79dadad7934  lib-strsim-0403e79dadad7934.json
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/deltae/: DEMethod.t.html  all.html  constant.DECMC1.html  constant.DECMC2.html  enum.DEMethod.html  enum.ValueError.html  index.html  sidebar-items.js  struct.DeltaE.html  struct.LabValue.html  struct.LchValue.html  struct.XyzValue.html  trait.Delta.html  trait.FromStr.html  trait.Round.html  trait.Validate.html
docs/doc/deltae/color/: LabValue.t.html  LchValue.t.html  (+10 more)
examples/: deltae.rs  readme.rs
examples/deltae/: cli.rs  deltae.rs
src/: color.rs  convert.rs  delta.rs  eq.rs  illuminant.rs  lib.rs  main.rs  matrix.rs  round.rs  tests.rs  validate.rs
(+54 files in other folders)
