[package]
name = "deltae"
version = "0.2.0"
authors = ["Ryan O'Beirne <ryanobeirne@gmail.com>"]
description = "Calculate Delta E between two colors in CIE Lab space."
edition = "2018"
license = "GPL-3.0"
documentation = "https://ryanobeirne.github.io/deltae"
homepage = "https://github.com/ryanobeirne/deltae"
repository = "https://github.com/ryanobeirne/deltae.git"
readme = "README.md"

[[example]]
name = "deltae"
path = "examples/deltae/deltae.rs"

[[example]]
name = "readme"
path = "examples/readme.rs"

[dev-dependencies]
clap = "2.32.0"
